--- a/novi/demo/src/main/resources/static/stranice/evidencijaZaposlenih.html
+++ b/novi/demo/src/main/resources/static/stranice/evidencijaZaposlenih.html
@@ -1,9 +1,9 @@
 <div ng-include src="'/meni/meniOstali.html'"></div>
  
- <div class="container center" ng-contoller='restoranController' ng-init="uzmiRestoran()">
+ <div class="container center" ng-contoller='restoranController'>
   <div class="row">
-   <div class="well poluProvidanBeo">
-    <p><h2>Evidencija zaposlenih</h2></p>
+   <div class="well poluProvidanCrni">
+    <p><h2 style="color:white;">Evidencija zaposlenih</h2></p>
    </div>
   </div>  
  
