--- a/novi/demo/src/main/resources/static/stranice/pocetnaRadnik.html
+++ b/novi/demo/src/main/resources/static/stranice/pocetnaRadnik.html
@@ -33,7 +33,7 @@
 					<div class="panel-body">
 						<form >
 							
-							<input style="margin: auto;" class="img-responsive" type="image" src="Slike/rsz_ponudee.jpg"/> 
+							<input style="margin: auto;" class="img-responsive" type="image" src="Slike/rsz_ponudee.jpg" ng-click="prikaziPonude(ulogova.vrstaKorisnika)"/> 
 						</form>
 					</div>
 				</div>
@@ -91,7 +91,7 @@
    </tr>
     <tr>
     <td style="color:white;">Email adresa:</td>
-    <td><input type="email" name="emailAdresa"  class="form-control" ng-model="ulogova.email" value="ulogovan.email"/></td>
+    <td><input type="email" name="emailAdresa"  class="form-control" ng-model="ulogovan.email" value="ulogovan.email"/></td>
    </tr>
    <tr>
     <td>&nbsp;</td>
