--- a/novi/demo/src/main/resources/static/stranice/izmenaKorisnika.html
+++ b/novi/demo/src/main/resources/static/stranice/izmenaKorisnika.html
@@ -1,8 +1,7 @@
-
 <div class="container center" ng-contoller="izmenaKorisnikaController">
 <div class="row">
 <div class="col-md-4 col-md-offset-4" >
- <div class="well">
+ <div class="well poluProvidanBeo">
 <form action="">
   <table>
    <tr>
@@ -10,52 +9,52 @@
     <td><input type="text" name="Ime" class="form-control" value={{izmena.ime}} /></td>
    </tr>
    <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
    </tr>
     <tr>
     <td>Prezime:</td>
     <td><input type="text" name="prezime" class="form-control" value={{izmena.prezime}}/></td>
    </tr>
    <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td> 
+    <td>&nbsp;</td>
+    <td>&nbsp;</td> 
    </tr>
     <tr>
     <td>Email adresa:</td>
     <td><input type="text" name="emailAdresa" class="form-control" value={{izmena.email}}/></td>
    </tr>
    <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
    </tr>   
    <tr>
     <td>Korisnicko ime:</td>
     <td><input type="text" name="korisnickoIme" class="form-control" value={{izmena.korisnickoIme}}/></td>
    </tr>
    <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
    </tr>
    <tr>
     <td>Sifra:</td>
     <td><input type="password" name="sifra" class="form-control"/></td>
    </tr>
    <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
    </tr>
    <tr>
     <td>Ponovite sifru:</td>
     <td><input type="password" name="sifra2" class="form-control"/></td>
    </tr>
     <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
    </tr>
    <tr>
     <td>&nbsp;</td>
-    <td><input class="btn btn-success" type="submit" value="Izmeni" /></td>
+    <td><input class="btn izmeniRegistruj" type="submit" value="Izmeni" /></td>
    </tr>
   </table>
  </form>
